# summer-of-code-2024

./: .gitignore  README.md  flake.nix  pyproject.toml
backend/week-1/inventory_flask/: logfile
backend/week-1/inventory_flask/app/: __init__.py
frontend/week-1/: loginPage.html  style.css
machine-learning/week-1/: Financial Fraud Detection.ipynb  Financial_Fraud_Detection.ipynb  Week_1_DSOC.ipynb  lightgbm_model.txt  logistic_regression_model.pkl  main.py  neural_network_model.keras  report.md  xgboost_model.json
