[tool.poetry]
name = "neural_network_zero_to_hero"
version = "0.1.0"
description = "Me being me"
authors = ["Shaurya Pratap Singh <ee1240486@ee.iitd.ac.in>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "*"
matplotlib = "*"
micrograd = "^0.1.0"
graphviz = "^0.20.3"
torch = "^2.5.1"
torchvision = "^0.20.1"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
