[tool.poetry]
name = "neural_network_zero_to_hero"
version = "0.1.0"
description = "Me being me"
authors = ["Shaurya Pratap Singh <ee1240486@ee.iitd.ac.in>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "*"
matplotlib = "*"
micrograd = "^0.1.0"
graphviz = "^0.20.3"
torch = "^2.5.1"
torchvision = "^0.20.1"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
seaborn = "^0.13.2"
tensorflow = "^2.18.0"
joblib = "^1.4.2"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
pydantic = "^2.10.3"
python-multipart = "^0.0.19"
shap = "^0.46.0"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
